<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_five"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_user_icons"
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_96sdp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/user_comment_def" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_ten"
        android:layout_marginRight="@dimen/dimen_ten"
        android:layout_marginTop="@dimen/dimen_fifteen">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/linearLayout"
            android:layout_toStartOf="@+id/linearLayout">

            <TextView
                android:id="@+id/tv_header_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text=""
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/_12sdp" />
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_header_txt"
                android:layout_marginTop="@dimen/dimen_five"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="0 mutual"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/tv_mutuals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_address"
                android:layout_marginTop="@dimen/dimen_five"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="0 mutual"
                android:textColor="@color/text_color_secondary"
                android:textSize="@dimen/_10sdp" />

            <LinearLayout
                android:id="@+id/ll_request_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mutuals"
                android:layout_marginTop="@dimen/dimen_five"
                android:visibility="gone"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/tv_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@color/divider_color"
                    android:layout_marginRight="@dimen/dimen_twenty"
                    android:paddingLeft="@dimen/dimen_ten"
                    android:paddingRight="@dimen/dimen_ten"
                    android:gravity="center"
                    android:text="@string/str_accept"
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/color_white" />
                <TextView
                    android:id="@+id/tv_reject"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@color/notification_reject_color"
                    android:layout_marginRight="@dimen/dimen_twenty"
                    android:paddingLeft="@dimen/dimen_ten"
                    android:paddingRight="@dimen/dimen_ten"
                    android:gravity="center"
                    android:text="@string/str_decline"
                    android:textSize="@dimen/_8sdp"
                    android:textColor="@color/color_white" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_accepted_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_accepted"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@color/divider_color"
                android:layout_marginRight="@dimen/_10sdp"
                android:paddingLeft="@dimen/dimen_ten"
                android:paddingRight="@dimen/dimen_ten"
                android:gravity="center"
                android:text="@string/str_friend"
                android:textColor="@color/color_white" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>