<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_emergency"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_scroll"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar_layout"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/toolbar_layout"
                android:background="@color/divider_color" />

            <TextView
                android:id="@+id/tv_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:layout_marginBottom="@dimen/dimen_ten"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/ic_user_orange"
                android:drawablePadding="@dimen/dimen_ten"
                android:gravity="center_vertical"
                android:text="@string/str_about"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_about"
                android:background="@color/divider_color" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/divider2"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">


                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_ten"
                    android:maxLines="6"
                    android:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum "
                    android:textColor="@color/text_color_secondary"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_description"
                    android:layout_marginTop="@dimen/dimen_ten"
                    android:background="@color/bg_layout"
                    android:paddingLeft="@dimen/dimen_ten"
                    android:paddingRight="@dimen/dimen_ten">

                    <TextView
                        android:id="@+id/tv_label1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_ten"
                        android:gravity="left"
                        android:padding="@dimen/dimen_five"
                        android:text="@string/str_phone_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/tv_label1"
                        android:background="@color/divider_color" />

                    <TextView
                        android:id="@+id/tv_phone1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider4"
                        android:layout_marginTop="@dimen/dimen_five"
                        android:gravity="left"
                        android:padding="@dimen/dimen_five"
                        android:text="0123456789 (Home)"
                        android:textColor="@color/text_color_secondary"

                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_phone2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_phone1"
                        android:layout_marginTop="@dimen/dimen_five"
                        android:gravity="left"
                        android:padding="@dimen/dimen_five"
                        android:text="0123456789 (Mobile)"
                        android:textColor="@color/text_color_secondary"

                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/tv_phone2"
                        android:background="@color/divider_color" />

                    <TextView
                        android:id="@+id/tv_label2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider5"
                        android:layout_marginTop="@dimen/dimen_ten"
                        android:gravity="left"
                        android:padding="@dimen/dimen_five"
                        android:text="@string/str_address"
                        android:textColor="@color/black"

                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/divider6"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/tv_label2"
                        android:background="@color/divider_color" />

                    <TextView
                        android:id="@+id/tv_address_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider6"
                        android:layout_marginTop="@dimen/dimen_five"
                        android:gravity="left"
                        android:padding="@dimen/dimen_five"
                        android:text="819 Black Street \npasadena,CA 91106"
                        android:textColor="@color/text_color_secondary"

                        android:textSize="@dimen/_12sdp" />


                    <View
                        android:id="@+id/divider7"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/tv_address_1"
                        android:background="@color/divider_color" />

                    <TextView
                        android:id="@+id/tv_label3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider7"
                        android:layout_marginTop="@dimen/dimen_ten"
                        android:gravity="left"
                        android:padding="@dimen/dimen_five"
                        android:text="@string/str_email"
                        android:textColor="@color/black"

                        android:textSize="@dimen/_12sdp" />

                    <View
                        android:id="@+id/divider8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/tv_label3"
                        android:background="@color/divider_color" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider8"
                        android:layout_marginTop="@dimen/dimen_five"
                        android:gravity="left"
                        android:padding="@dimen/dimen_five"
                        android:text="ABSC@gmail.com"
                        android:textColor="@color/text_color_secondary"

                        android:textSize="@dimen/_12sdp" />


                    <View
                        android:id="@+id/divider9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/tv_email"
                        android:background="@color/divider_color" />
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
